--- a/home.html
+++ b/home.html
@@ -413,7 +413,7 @@
     <div class="container">
       <div class="row justify-content-center pb-5 mb-3">
         <div class="col-md-7 heading-section text-center ftco-animate">
-          <h2>Message From Head</h2>
+          <h2>Message From Heads</h2>
         </div>
       </div>
       <div class="row ftco-animate">
