--- a/dosa.html
+++ b/dosa.html
@@ -46,161 +46,71 @@
       </div>
     </div>
   </nav>
+  <section class="ftco-section bg-light">
+    <div class="container">
+      <!-- <div class="container"> -->
+      <!-- <div class="row no-gutters slider-text align-items-end"> -->
+      <!-- <div class="col-md-9 ftco-animate pb-5"> -->
+      <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+      <h1 class="mb-0 bread"> Dean of Student Affairs</h1>
+      <!-- </div> -->
+      <!-- </div> -->
+      <!-- </div> -->
+      <div class="row justify-content-center pb-5 mb-3">
+        <div class="col-md-7 heading-section text-center ftco-animate">
+          <h2 style="padding-left:200px;">Connect With Us</h2>
+        </div>
+      </div>
+      <div class="row">
 
-
-<!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
-<!-- <div class="overlay"></div> -->
-<!-- <div class="container">
-<div class="row no-gutters slider-text align-items-end">
-<div class="col-md-9 ftco-animate pb-5">
-<p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
-<h1 class="mb-0 bread">CSED</h1>
-</div>
-</div>
-</div> -->
-<!-- </section> -->
-
-
-
-
-
-
-
-  <!-- team-area -->
-  <!--       <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
-            <div class="circal1 item-zoom-inout"></div>
-            <div class="circal2 item-zoom-inout"></div>
-            <div class="circal3 item-zoom-inout"></div>
-            <div class="circal4 item-zoom-inout"></div>
-            <div class="container">
-
-                <div class="row"  style="padding-top: 50px;">
-                    <div class="col-lg-5">
-                        <div class="wow fadeInLeft" data-animation="fadeInLeft" data-delay=".2s">
-                            <img src="images/cse.jpg" alt="CSED">
-                        </div>
-                    </div>
-                    <div class="col-lg-7"  style="padding-left: 50px;">
-                        <div class="s-about-content pl-30 wow fadeInRight" data-animation="fadeInRight" data-delay=".2s">
-                            <h2>Dr. Maninder Singh</h2>
-                            <span><i>Head of Department, Department of Computer Science & Engineering</i></span>
-                            <p>Welcome to the Department of Computer Science and Engineering. I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders. We at Computer Science and Engineering department offer one of the best Computer Engineering undergraduate program aimed at the super-creative generation.</p>
-                            <p>We have carefully crafted our undergraduate program to offer elective focus in six major areas of Computing: High Performance Computing, Machine Learning & Data Analytics, Computer Animation and Gaming, Cyber and Information Security, Software Engineering and last but not least Mathematics and Computing. Apart from these, design projects through-out the program highlight life-long outcome based, research led teaching pedagogy. With these choices, we hope to fulfil the requirement of industry as well quench the thirst of budding professionals.</p>
-                            <p>For More Details <p><a href="http://csed.thapar.edu/" class="btn btn-primary mr-md-4 py-3 px-4">Learn more <span class="ion-ios-arrow-forward"></span></a></p></p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-      
-
-
-
-
-
- -->
-
-<!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
-<div class="container">
-<div class="row d-flex no-gutters">
-<div class="col-md-5 d-flex"> -->
-<!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
-</div>
-</div>
-<div class="col-md-7 pl-md-5 py-md-5">
-<div class="heading-section pt-md-5">
-<h2 class="mb-4">Why Choose Us?</h2> -->
-<!-- </div> -->
- <!-- 
-<div class="row" style="padding-top: 50px;">
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-	<span class="fal fa-users"></span>
- -->
-<!-- </div> -->
-<!-- <div class="text pl-3">
-<h4>Great Faculty</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-	<span class="fal fa-building"></span>
-
-</div>
-<div class="text pl-3">
-<h4>New Infrastructure</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="icon color3"></span></div>
-<div class="text pl-3">
-<h4>More Learning</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="fal fa-magic"></span></div>
-<div class="text pl-3">
-<h4>Enhanced Syllabi</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-</div>
- -->
-<!-- </div>
-</div>
-</div>
-</section> -->
-<section class="ftco-section bg-light">
-<div class="container">
-  <!-- <div class="container"> -->
-    <!-- <div class="row no-gutters slider-text align-items-end"> -->
-    <!-- <div class="col-md-9 ftco-animate pb-5"> -->
-    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">	Dean of Student Affairs</h1>
-    <!-- </div> -->
-    <!-- </div> -->
-    <!-- </div> -->
-<div class="row justify-content-center pb-5 mb-3">
-<div class="col-md-7 heading-section text-center ftco-animate">
-<h2 style="padding-left:200px;">Connect With Us</h2>
-</div>
-</div>
-<div class="row">
-
-<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+        <div class="col-md-4 ftco-animate" style="-webkit-box-flex: 0;
     -ms-flex: 0 0 70%;
     flex: 0 0 70%;
     max-width: 70%;
    margin-left: 200px;">
-<div class="block-7">
-<div class="img" style="background-image: url(images/faculty/dosa.jpeg);height:450px;"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">	Dean of Student Affairs</span>
-<p style="text-align: center;">	Dean of Student Affairs</p>
-<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
-<br>
-<!-- <p>The focus of the department is on state of the art projects done by our BE and ME students, excellent teaching learning process, better alumni relations, good industry attachment program through project semester and outcome based education.At the undergraduate level, the Department lays emphasis on Software Engineering, Algorithm Analysis and Design, Operating Systems, Computer Graphics, Database and information Systems Engineering and Networking Technologies. The Department provides exposure to emerging technologies as well as futuristic technologies like High Performance Computing, Computer Animation and Gaming, Machine Learning and Data Analytics, Information and Cyber Security and Software Engineering.
+          <div class="block-7">
+            <div class="img" style=" margin-top: 20px; margin-left: auto;
+margin-right: auto; background-image: url(images/dosamaam.jpeg);height:550px; width:550px; border-radius: 50%;"></div>
+            <div class="text-center p-4">
+              <span class="excerpt d-block" style="text-align: center;"> Dean of Student Affairs</span>
+              <p style="text-align: center;"> Dean of Student Affairs</p>
+              <p style="text-align: center;">Date & Time: 21 Sept 2020, 10:00 AM</p>
+              <br>
+              <p style="text-align: justify;">At Thapar, we believe that holistic learning is unequivocally the
+                foundation of growth. In academics, in addition to learning engineering fundamentals we endorse critical
+                thinking, problem-solving and communication skills, essential to lifelong learning. We tap and
+                channelize the intellectual potential to create high quality engineers.
 
-</p> -->
+                We uphold a student centric approach, inculcating values of integrity, cohesiveness and synergy. The
+                extra-curricular activities organized at Thapar serve as a breeding ground for future leaders. Each
+                activity is an experience tailored for students to pursue their interests and showcase their talent and
+                skill. While getting involved in extra-curricular activities and exploring new interests, students build
+                new bonds of friendship and establish their on-campus clusters. These interactions not only indoctrinate
+                managerial prowess but also help students in honing their interpersonal skills.
+
+                A home away from home, this vibrant campus offers many opulent hostels with contemporary facilities. A
+                lush green campus with a community of inspired and talented people coupled with an effervescent ambience
+                offers a perfect student life. Live it to believe it.</p>
 
 
-<a href="https://tiet.zoom.us/my/msingh/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
-</div>
-</div>
-</div>
+              <a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
+                class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                  style="padding: 10px;"></span>Connect With Us</a>
+                  <!-- <p style="text-align: center;"> Meeting ID: 980 0948 9667</p>
+                  <p style="text-align: center;"> Passcode: 006042</p> -->
+            </div>
+          </div>
+        </div>
 
-</div>
-</div>
-</section>
+      </div>
+    </div>
+  </section>
 
-<div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://csed.thapar.edu/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
-	
-</div>
+  <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
+    <a href="http://csed.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home"
+        style="padding: 10px;"></span>For More Info</a>
+
+  </div>
 
 
   <footer class="footer">
@@ -212,15 +122,18 @@
             institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
           <ul class="ftco-footer-social p-0">
             <li class="ftco-animate"><a
-                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"  target="_blank"
-                data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/"  target="_blank" data-toggle="tooltip"
-                data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en"  target="_blank" data-toggle="tooltip"
-                data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
+                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter"><span
+                  class="fa fa-twitter"></span></a></li>
+            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/" target="_blank"
+                data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a>
+            </li>
+            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en" target="_blank"
+                data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a>
+            </li>
             <!-- thapar link -->
-            <li class="ftco-animate"><a href="http://www.thapar.edu/"  target="_blank" data-toggle="tooltip" data-placement="top"
-                title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
+            <li class="ftco-animate"><a href="http://www.thapar.edu/" target="_blank" data-toggle="tooltip"
+                data-placement="top" title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
           </ul>
         </div>
 
@@ -239,10 +152,11 @@
             <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-            <li><a href="http://www.thapar.edu/"  target="_blank" class="py-2 d-block">Thapar Official Website</a></li>
-<!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
+            <li><a href="http://www.thapar.edu/" target="_blank" class="py-2 d-block">Thapar Official Website</a></li>
+            <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
- -->          </ul>
+ -->
+          </ul>
 
 
         </div>
