--- a/chemical.html
+++ b/chemical.html
@@ -138,7 +138,7 @@
             Mr. Shubham<br>
           </td>
 
-          <td><a href="ttps://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
+          <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
                 style="padding: 10px;"></span>Connect With Us</a><br><br>
 
