--- a/dosa.html
+++ b/dosa.html
@@ -107,7 +107,7 @@ margin-right: auto; background-image: url(images/dosamaam.jpeg);height:550px; wi
   </section>
 
   <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-    <a href="http://csed.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home"
+    <a href="http://www.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home"
         style="padding: 10px;"></span>For More Info</a>
 
   </div>
