--- a/csed.html
+++ b/csed.html
@@ -224,6 +224,7 @@
           Dr. Rajesh Kumar <br>
           Dr. Anil Kumar Verma<br>
           Dr. Neeraj Kumar<br>
+          Dr. Inderveer Channa<br>
   </td>
   
   <td><a href="https://tiet.zoom.us/my/msingh"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
@@ -245,6 +246,7 @@
           Dr. Rajesh Kumar <br>
           Dr. Anil Kumar Verma<br>
           Dr. Neeraj Kumar<br>
+          Dr. Inderveer Channa<br>
   </td>
   <td><a href="https://tiet.zoom.us/my/msingh"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
   
@@ -265,6 +267,7 @@
           Dr. Rajesh Kumar <br>
           Dr. Anil Kumar Verma<br>
           Dr. Neeraj Kumar<br>
+          Dr. Inderveer Channa<br>
   
   </td>
   <td><a href="https://tiet.zoom.us/my/msingh"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
