--- a/home.html
+++ b/home.html
@@ -322,7 +322,7 @@
           </video>
         </div>
 
-        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" style="margin-left: 200px;">
+        <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate" >
           <div class="d-block services text-center">
             <div class="icon d-flex align-items-center justify-content-center">
               <img src="images/school.png" style="width:80%;">
@@ -396,8 +396,7 @@
         <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
           <div class="block-18 text-center">
             <div class="text">
-              <strong class="number" data-number="30000">0</strong>
-            </div>
+              <strong class="number" data-number="30000"></strong>
             <div class="text">
               <span>Success Stories</span>
             </div>
