--- a/alumni.html
+++ b/alumni.html
@@ -158,7 +158,7 @@
             <div class="text pt-3 px-3 pb-4 text-center">
               <h3>Rakesh Anand</h3>
               <span class="position mb-2">1980, Mechanical Engineering</span>
-              <p style="text-align: justify;">MTech (Material Sc) IIT Bom<br> MMS (Osmania
+              <p style="text-align: justify;">Alumni MTech (Material Sc) IIT Bom<br> MMS (Osmania
                 University)<br>PG Diploma Marine Hydraulics Erstwhile USSR
                 <br>Hold Chief Engineer tickets from DG Shipping
                 <br>Marine Engineer Specialisation Course from INS Shivaji</p>
@@ -166,7 +166,7 @@
               
               <div class="faded">
                 <p style="text-align: justify;">Former Chairman and Managing Director (Mazagon Dock Shipbuilders Limited)</p>
-                <br><br><br><br><br><br><br>
+                <br><br><br><br><br><br>
 
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
@@ -417,9 +417,9 @@
               <h3>Manoj Malhotra</h3>
               <span class="position mb-2">1994, Civil Engineering</span>
               <div class="faded">
-                <p style="text-align: justify;">Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
-                <p style="text-align: justify;">ME Structures from PEC Chandigarh</p>
-                <br><br><br><br>
+                <p style="text-align: justify;">Executive Engineer, DWSS, Punjab.<br> Had worked as  Site Engineer, Siel Chemical Complex</p>
+                <p style="text-align: justify;"> Alumni ME Structures from PEC Chandigarh</p>
+                <br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000">3:00-4:00 PM </span>
                 </p>
@@ -458,7 +458,7 @@
               <span class="position mb-2">1994, Electronics (Instrumentation and Control) Engineering</span>
               <div class="faded">
                 <p style="text-align: justify;">
-                  Current designation: <br>Self-Employed<br>Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
+                  Current designation: <br>Self-Employed<br>Past organizations:  EIL,  Punwire,  NIIT</p>
                 <br><br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 Noon ; 2:00-3:00 PM </span>
@@ -583,8 +583,8 @@
               <span class="position mb-2">1994, Electronics and Electrical Communication Engineering </span>
               <div class="faded">
                 <p style="text-align: justify;">Director, Product and Technology Programs
-                  Workday, worked at Salesforce, Cisco, Sun Microsystems, Silicon Graphics, CMC Ltd</p>
-                <br><br><br><br><br>
+                  Workday <br> Worked at Salesforce, Cisco, Sun Microsystems, Silicon Graphics, CMC Ltd</p>
+                <br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM </span> </p>
                 <a href="https://tiet.zoom.us/j/97902085330?pwd=SWFDY3QyUHplOEF2N2R5MGc3VkczQT09" target="_blank"
@@ -623,8 +623,8 @@
 
               <div class="faded">
                 <p >Director of Sales and Marketing, Great Wall Motor</p>
-                <p style="text-align: justify;">Alumnus Harvard Business School, worked at Nissan, Volkswagen, General Motors & Maruti  </p>
-                <br><br><br><br><br><br>
+                <p style="text-align: justify;">Alumnus Harvard Business School<br>Worked at Nissan, Volkswagen, General Motors & Maruti  </p>
+                <br><br><br><br>
 
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000">4:00-5:00 PM </span>
@@ -670,10 +670,10 @@
               <span class="position mb-2">1994, Mechanical Engineering</span>
               <div class="faded">
                 <p style="text-align: justify;">Director, Global Transaction Services
-                  Bank of America, Hong Kong
-                  Deutsche Bank</p>
+                  Bank of America, Hong Kong<br>
+                   Had worked in Deutsche Bank</p>
                 <p>Alumnus IIM Bangalore</p>
-                <br><br><br><br><br><br><br>
+                <br><br><br><br>
                 <p style="font-weight: bold;">DATE: 21 Sept,2020 </p>
                 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>
                 </p>
@@ -812,7 +812,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
         <tr>
           <th scope="row">11:00-12:00 PM</th>
@@ -825,7 +825,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
         <tr>
           <th scope="row">12:00-1:00 PM</th>
@@ -838,7 +838,7 @@
           Meeting ID: 979 0208 5330<br>
           Passcode: 932714
         </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
         <tr>
           <th scope="row">1:00-2:00 PM</th>
@@ -851,7 +851,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
         <tr>
           <th scope="row">2:00-3:00 PM</th>
@@ -864,7 +864,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
         <tr>
           <th scope="row">3:00-4:00 PM</th>
@@ -877,7 +877,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
         <tr>
           <th scope="row">4:00-5:00 PM</th>
@@ -890,7 +890,7 @@
             Meeting ID: 979 0208 5330<br>
             Passcode: 932714
           </td>
-          <td>Mansi</td>
+          <td>Mansi Bhargava</td>
         </tr>
       </tbody>
     </table>
